--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,35 +90,51 @@
     "        for l in range(len(graph[k])):\n",
     "            if graph[k][l]:\n",
     "                cnt += 1\n",
-    "                print(f\"{(i, j)} : {cnt}}\")\n",
-    "                break\n",
+    "                print(f\"{(i, j)} : {cnt}\")\n",
+    "                continue\n",
     "            if not graph[k][l] and not visited[k][l]:\n",
     "                dfs(graph, k, l, visited)       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0) (0, 1) "
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to tuple.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dfs_bfs_01.ipynb Cell 6\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dfs(graph, \u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m, visited)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dfs_bfs_01.ipynb Cell 6\u001b[0m line \u001b[0;36mdfs\u001b[1;34m(graph, i, j, visited)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m graph[k][l] \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m visited[k][l]:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     dfs(graph, k, l, visited)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dfs_bfs_01.ipynb Cell 6\u001b[0m line \u001b[0;36mdfs\u001b[1;34m(graph, i, j, visited)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mif\u001b[39;00m graph[k][l]:\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     cnt \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00m(i, j) \u001b[39m:\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mcnt\u001b[39m}\u001b[39;00m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m graph[k][l] \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m visited[k][l]:\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported format string passed to tuple.__format__"
+      "(0, 0) (0, 1) (0, 1) : 1\n",
+      "(1, 0) (1, 0) : 2\n",
+      "(1, 1) (1, 1) : 3\n",
+      "(1, 2) (1, 2) : 4\n",
+      "(1, 2) : 5\n",
+      "(1, 2) : 6\n",
+      "(3, 0) (3, 0) : 7\n",
+      "(3, 0) : 8\n",
+      "(3, 0) : 9\n",
+      "(3, 1) (3, 1) : 10\n",
+      "(3, 1) : 11\n",
+      "(3, 1) : 12\n",
+      "(3, 2) (3, 2) : 13\n",
+      "(3, 2) : 14\n",
+      "(3, 2) : 15\n",
+      "(3, 3) (3, 3) : 16\n",
+      "(3, 3) : 17\n",
+      "(3, 3) : 18\n",
+      "(3, 4) (3, 4) : 19\n",
+      "(3, 4) : 20\n",
+      "(3, 4) : 21\n",
+      "(1, 1) : 22\n",
+      "(1, 1) : 23\n",
+      "(1, 0) : 24\n",
+      "(1, 0) : 25\n",
+      "(0, 1) : 26\n",
+      "(0, 1) : 27\n",
+      "(0, 0) : 28\n",
+      "(0, 0) : 29\n",
+      "(0, 0) : 30\n"
      ]
     }
    ],
