--- a/dbn_dfs_bfs_01.ipynb
+++ b/dbn_dfs_bfs_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,13 +102,13 @@
     "        n_i = i + dy[k]\n",
     "        n_j = j + dx[k]\n",
     "        \n",
-    "        if not graph[n_i][n_j] and not visited[n_i][n_j] and is_valid_coord(n_i, n_j, 4, 5):\n",
-    "            dfs(graph, n_i, n_j, visited)"
+    "        if is_valid_coord(n_i, n_j, 4, 5) and not visited[n_i][n_j] and not graph[n_i][n_j]:\n",
+    "            dfs(graph, n_i, n_j, visited)           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -125,31 +125,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 0) "
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dfs_bfs_01.ipynb Cell 8\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dfs(graph, \u001b[39m3\u001b[39;49m, \u001b[39m0\u001b[39;49m, visited)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dfs_bfs_01.ipynb Cell 8\u001b[0m line \u001b[0;36mdfs\u001b[1;34m(graph, i, j, visited)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m n_i \u001b[39m=\u001b[39m i \u001b[39m+\u001b[39m dy[k]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m n_j \u001b[39m=\u001b[39m j \u001b[39m+\u001b[39m dx[k]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m graph[n_i][n_j] \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m visited[n_i][n_j] \u001b[39mand\u001b[39;00m is_valid_coord(n_i, n_j, \u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m):\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dfs_bfs_01.ipynb#X11sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     dfs(graph, n_i, n_j, visited)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "(3, 0) (3, 1) (3, 2) (3, 3) (3, 4) "
      ]
     }
    ],
    "source": [
     "dfs(graph, 3, 0, visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 4) "
+     ]
+    }
+   ],
+   "source": [
+    "dfs(graph, 0, 4, visited)"
    ]
   },
   {
