--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,9 @@
     "    for j in range(len(submax_by_col[i])):\n",
     "        sub_list = []\n",
     "        for k in range(-1, 2):\n",
-    "            if (i-k) < 0 or (i+k) >= len(submax_by_col):\n",
+    "            if (i-k) < 0:\n",
+    "                continue\n",
+    "            elif (i+k) >= len(submax_by_col):\n",
     "                continue\n",
     "            else:\n",
     "                sub_list.append(submax_by_col[i][j-1] + goldmine[i+k][j])\n",
@@ -94,7 +96,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, len(submax_by_col)):\n",
+    "    for j in range(len(submax_by_col[i])):\n",
+    "        sub_list = []\n",
+    "        for k in range(-1, 2):\n",
+    "            if (i-k) < 0:\n",
+    "                continue\n",
+    "            elif (i+k) >= len(submax_by_col):\n",
+    "                continue\n",
+    "            else:\n",
+    "                sub_list.append(submax_by_col[i][j-1] + goldmine[i+k][j])\n",
+    "        submax_by_col[i][j] = max(sub_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
