--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -77,15 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1, len(submax_by_col)):\n",
-    "    for j in range(len(submax_by_col[i])):\n",
+    "for i in range(len(submax_by_col)):\n",
+    "    for j in range(1, len(submax_by_col[i])):\n",
     "        sub_list = []\n",
     "        for k in range(-1, 2):\n",
-    "            if (i-k) < 0:\n",
+    "            if (i+k) < 0:\n",
     "                continue\n",
     "            elif (i+k) >= len(submax_by_col):\n",
     "                continue\n",
@@ -96,26 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(1, len(submax_by_col)):\n",
-    "    for j in range(len(submax_by_col[i])):\n",
-    "        sub_list = []\n",
-    "        for k in range(-1, 2):\n",
-    "            if (i-k) < 0:\n",
-    "                continue\n",
-    "            elif (i+k) >= len(submax_by_col):\n",
-    "                continue\n",
-    "            else:\n",
-    "                sub_list.append(submax_by_col[i][j-1] + goldmine[i+k][j])\n",
-    "        submax_by_col[i][j] = max(sub_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +122,13 @@
     "for row in submax_by_col:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
