--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -58,26 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 0, 0, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [0] * m\n",
-    "a[0] = max(submax_by_col[j][0] for j in range(len(submax_by_col)))\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -107,9 +88,9 @@
       "[2, 1, 4, 7]\n",
       "[0, 6, 4, 7]\n",
       "\n",
-      "[1, 0, 0, 0]\n",
+      "[1, 4, 8, 15]\n",
       "[2, 8, 12, 19]\n",
-      "[2, 8, 12, 19]\n"
+      "[0, 6, 10, 17]\n"
      ]
     }
    ],
@@ -125,10 +106,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max([submax_by_col[i][2] for i in range(len(submax_by_col))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 8, 12, 19]\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_by_col = [max([submax_by_col[i][j] for i in range(len(submax_by_col))]) for j in range(len(submax_by_col[0]))]\n",
+    "print(max_by_col)\n",
+    "\n",
+    "print(max_by_col[-1])"
+   ]
   }
  ],
  "metadata": {
