--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(submax_by_col)):\n",
+    "    for j in range(1, len(submax_by_col[i])):\n",
+    "        sub_list = []\n",
+    "        for k in range(-1, 2):\n",
+    "            if (i+k) >= 0 and (i+k) < len(submax_by_col):\n",
+    "                sub_list.append(submax_by_col[i+k][j-1] + goldmine[i][j])\n",
+    "            else:\n",
+    "                continue\n",
+    "        submax_by_col[i][j] = max(sub_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -91,10 +108,10 @@
       "[5, 0, 2, 3]\n",
       "[0, 6, 1, 2]\n",
       "\n",
-      "[1, 4, 8, 13]\n",
-      "[2, 5, 9, 14]\n",
-      "[5, 11, 15, 18]\n",
-      "[0, 6, 8, 11]\n"
+      "[1, 0, 0, 0]\n",
+      "[2, 0, 0, 0]\n",
+      "[5, 0, 0, 0]\n",
+      "[0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -110,15 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 11, 15, 18]\n",
-      "18\n"
+      "[5, 11, 12, 14]\n",
+      "14\n"
      ]
     }
    ],
