--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -20,8 +20,8 @@
    "source": [
     "n, m = map(int, input().split())\n",
     "print(f\"n : {n},  m : {m}\")\n",
-    "\n",
-    "my_input = list(map(int, input().split()))   # 1 3 3 2 2 1 4 7 0 6 4 7    # 1 3 1 5 2 2 4 1 5 0 2 3 0 6 1 2\n",
+    "7\n",
+    "my_input = list(map(int, input().split()))   # 1 3 3 2 2 1 4 1 0 6 4 7    # 1 3 1 5 2 2 4 1 5 0 2 3 0 6 1 2\n",
     "goldmine = [[0 for _ in range(m)] for _ in range(n)]\n",
     "\n",
     "for i in range(len(goldmine)):\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 3, 2]\n",
+      "[2, 1, 4, 1]\n",
+      "[0, 6, 4, 7]\n",
+      "\n",
+      "[1, 5, 8, 14]\n",
+      "[2, 3, 12, 13]\n",
+      "[0, 8, 12, 19]\n",
+      "\n",
+      "[2, 8, 12, 19]\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"3 4     1 3 3 2 2 1 4 1 0 6 4 7 \"\"\"\n",
+    "\n",
+    "for row in goldmine:\n",
+    "    print(row)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "for row in submax_by_col:\n",
+    "    print(row)\n",
+    "    \n",
+    "print()\n",
+    "\n",
+    "max_by_col = [max([submax_by_col[i][j] for i in range(len(submax_by_col))]) for j in range(len(submax_by_col[0]))]\n",
+    "print(max_by_col)\n",
+    "\n",
+    "print(max_by_col[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -92,35 +133,26 @@
       "[1, 5, 8, 16]\n",
       "[2, 7, 11, 14]\n",
       "[5, 5, 13, 16]\n",
-      "[0, 11, 12, 15]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for row in goldmine:\n",
-    "    print(row)\n",
-    "\n",
-    "print()\n",
-    "\n",
-    "for row in submax_by_col:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[0, 11, 12, 15]\n",
+      "\n",
       "[5, 11, 13, 16]\n",
       "16\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"4 4     1 3 1 5 2 2 4 1 5 0 2 3 0 6 1 2 \"\"\"\n",
+    "\n",
+    "for row in goldmine:\n",
+    "    print(row)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "for row in submax_by_col:\n",
+    "    print(row)\n",
+    "    \n",
+    "print()\n",
+    "\n",
     "max_by_col = [max([submax_by_col[i][j] for i in range(len(submax_by_col))]) for j in range(len(submax_by_col[0]))]\n",
     "print(max_by_col)\n",
     "\n",
