--- a/dbn_dp_soldier.ipynb
+++ b/dbn_dp_soldier.ipynb
@@ -18,6 +18,18 @@
     "soldiers = list(map(int, input().split()))     # 7 5 4 4 3 8 6 5 5 3 3 2 9 1 1\n",
     "print(soldiers)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_removals(array, k):\n",
+    "    cnt = 0\n",
+    "    subArray = array[k:]\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
