--- a/dbn_dp_soldier.ipynb
+++ b/dbn_dp_soldier.ipynb
@@ -21,14 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_removals(array, k):\n",
     "    cnt = 0\n",
     "    subArray = array[k:]\n",
-    "    "
+    "    for i in range(len(subArray)):\n",
+    "        if subArray[i] > subArray[0]:\n",
+    "            cnt += 1\n",
+    "    return cnt"
    ]
   }
  ],
