--- a/dbn_dp_soldier.ipynb
+++ b/dbn_dp_soldier.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7, 5, 4, 4, 3, 8, 6, 5, 5, 3, 3, 2, 9, 1, 1]\n"
+      "[15, 11, 4, 8, 5, 2, 4]\n"
      ]
     }
    ],
    "source": [
     "n = int(input())   # number of soliders\n",
-    "soldiers = list(map(int, input().split()))     # 7 5 4 4 3 8 6 5 5 3 3 2 9 1 1\n",
+    "soldiers = list(map(int, input().split()))     # 15 : 7 5 4 4 3 8 6 5 5 3 3 2 9 1 1    # 7 : 15 11 4 8 5 2 4\n",
     "print(soldiers)"
    ]
   },
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(10, 5), (9, 6), (8, 7), (7, 8), (6, 9), (9, 6), (8, 7), (7, 8), (6, 9), (5, 10), (4, 11), (3, 12), (3, 12), (2, 13), (1, 14)]\n",
-      "[(10, 5), (9, 6), (9, 6), (8, 7), (8, 7), (7, 8), (7, 8), (6, 9), (6, 9), (5, 10), (4, 11), (3, 12), (3, 12), (2, 13), (1, 14)]\n"
+      "[(4, 3), (3, 4), (2, 5), (3, 4), (2, 5), (1, 6), (1, 6)]\n",
+      "[(4, 3), (3, 4), (3, 4), (2, 5), (2, 5), (1, 6), (1, 6)]\n"
      ]
     }
    ],
