--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,22 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<_io.TextIOWrapper name='data/dbn_dijkstra.txt' mode='r' encoding='UTF-8'>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n : 6,   m : 11,   c : 1\n"
+     ]
     }
    ],
    "source": [
-    "txt = open(\"data/dbn_dijkstra.txt\", \"r\")\n"
+    "input = open(\"data/dbn_dijkstra.txt\", \"r\")\n",
+    "\n",
+    "n, m, c = map(int, input.readline().rstrip().split())\n",
+    "print(f\"n : {n},   m : {m},   c : {c}\")"
    ]
   }
  ],
