--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,13 +46,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[(3, 5), (4, 1), (2, 2)]\n",
+      "[(3, 3), (4, 2)]\n",
+      "[(6, 5), (2, 3)]\n",
+      "[(5, 1), (3, 3)]\n",
+      "[(6, 2), (3, 1)]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "for _ in range(m):\n",
     "    a, b, c = map(int, input.readline().rstrip().split())\n",
-    "    graph[a] = ((b, c))"
+    "    graph[a].append((b, c))\n",
+    "    \n",
+    "for row in graph:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[],\n",
+       " [(3, 5), (4, 1), (2, 2)],\n",
+       " [(3, 3), (4, 2)],\n",
+       " [(6, 5), (2, 3)],\n",
+       " [(5, 1), (3, 3)],\n",
+       " [(6, 2), (3, 1)],\n",
+       " []]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph_dict = {}\n",
+    "\n",
+    "for a, b, c in map(int, input.readline().rstrip().split()):    \n",
+    "    if a not in graph_dict.keys():\n",
+    "        graph_dict[a] = [(b, c)]\n",
+    "    else:\n",
+    "        graph_dict[a].append((b, c))    "
    ]
   }
  ],
