--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,34 +74,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[],\n",
-       " [(3, 5), (4, 1), (2, 2)],\n",
-       " [(3, 3), (4, 2)],\n",
-       " [(6, 5), (2, 3)],\n",
-       " [(5, 1), (3, 3)],\n",
-       " [(6, 2), (3, 1)],\n",
-       " []]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 : [(6, 2), (3, 1)]\n",
+      "4 : [(5, 1), (3, 3)]\n",
+      "3 : [(6, 5), (2, 3)]\n",
+      "1 : [(3, 5), (4, 1), (2, 2)]\n",
+      "2 : [(3, 3), (4, 2)]\n"
+     ]
     }
    ],
    "source": [
     "graph_dict = {}\n",
     "\n",
-    "for a, b, c in map(int, input.readline().rstrip().split()):    \n",
+    "for i in input.readlines():\n",
+    "    a, b, c = map(int, i.split())\n",
     "    if a not in graph_dict.keys():\n",
     "        graph_dict[a] = [(b, c)]\n",
     "    else:\n",
-    "        graph_dict[a].append((b, c))    "
+    "        graph_dict[a].append((b, c))\n",
+    "        \n",
+    "for k, v in graph_dict.items():\n",
+    "    print(f\"{k} : {v}\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 6 2\n",
+      "4 5 1\n",
+      "3 6 5\n",
+      "5 3 1\n",
+      "4 3 3\n",
+      "1 3 5\n",
+      "2 3 3\n",
+      "3 2 3\n",
+      "2 4 2\n",
+      "1 4 1\n",
+      "1 2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in input.readlines():\n",
+    "    a, b, c = map(int, i.split())\n",
+    "    if a not in graph_dict.keys():\n",
+    "        graph_dict[a] = [(b, c)]\n",
+    "    else:\n",
+    "        graph_dict[a].append((b, c))"
    ]
   }
  ],
