--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,21 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "[(3, 5), (4, 1), (2, 2)]\n",
-      "[(3, 3), (4, 2)]\n",
-      "[(6, 5), (2, 3)]\n",
-      "[(5, 1), (3, 3)]\n",
-      "[(6, 2), (3, 1)]\n",
-      "[]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nfor _ in range(m):\\n    a, b, c = map(int, input.readline().rstrip().split())\\n    graph[a].append((b, c))\\n    \\nfor row in graph:\\n    print(row)\\n'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -76,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
