--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -132,7 +132,10 @@
     "    min_value = INF\n",
     "    index = 0  # 최단거리가 가장 짧은 노드의 인덱스\n",
     "    for i in range(1, n+1):\n",
-    "        if distance[i] < min_value and not visited:"
+    "        if distance[i] < min_value and not visited:\n",
+    "            min_value = distance[i]\n",
+    "            index = i\n",
+    "    return index"
    ]
   }
  ],
