--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -104,26 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
-      "[False, False, False, False, False, False, False]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(distance)\n",
-    "print(visited)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +113,7 @@
     "    min_value = INF\n",
     "    index = 0  # 최단거리가 가장 짧은 노드의 인덱스\n",
     "    for i in range(1, n+1):\n",
-    "        if distance[i] < min_value and not visited:\n",
+    "        if distance[i] < min_value and not visited[i]:\n",
     "            min_value = distance[i]\n",
     "            index = i\n",
     "    return index"
@@ -140,131 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1000000000, 0, 2, 5, 1, 1000000000, 1000000000]\n",
-      "[False, True, False, False, False, False, False]\n",
-      "1000000000\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(distance)\n",
-    "print(visited)\n",
-    "print(min_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "min_value = INF\n",
-    "for i in range(1, n+1):\n",
-    "    #print(distance[i])\n",
-    "    if distance[i] < min_value and not visited:\n",
-    "        min_value = distance[i]\n",
-    "        print(i, min_value)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 0 1000000000 True\n",
-      "2 2 1000000000 False\n",
-      "3 5 1000000000 False\n",
-      "4 1 1000000000 False\n",
-      "5 1000000000 1000000000 False\n",
-      "6 1000000000 1000000000 False\n"
-     ]
-    }
-   ],
-   "source": [
-    "min_value = INF\n",
-    "for i in range(1, n+1):\n",
-    "    print(i, distance[i], min_value, visited[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000000000\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(min_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "[1000000000, 0, 2, 5, 1, 1000000000, 1000000000]\n",
-      "[False, True, False, False, False, False, False]\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(start)\n",
-    "distance[start] = 0\n",
-    "visited[start] = True\n",
-    "for j in graph_dict[start]:\n",
-    "    distance[j[0]] = j[1]    \n",
-    "print(distance)\n",
-    "print(visited)\n",
-    "now = get_smallest_node()\n",
-    "print(now)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,19 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "ename": "KeyError",
-     "evalue": "0",
+     "evalue": "6",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dijkstra.ipynb Cell 9\u001b[0m line \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m\"\"\"dijkstra algorithm 수행한다.\"\"\"\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dijkstra(start)\n",
-      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dijkstra.ipynb Cell 9\u001b[0m line \u001b[0;36mdijkstra\u001b[1;34m(start)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m visited[now] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m\"\"\"현재노드와 연결된 다른 노드들 확인\"\"\"\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m graph_dict[now]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     cost \u001b[39m=\u001b[39m distance[now] \u001b[39m+\u001b[39m j[\u001b[39m1\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39m\"\"\"현재노드를 거쳐서 다른노드로의 이동거리가 최단거리테이블에 저장된 거리보다 짧은 경우에 최단거리테이블을 갱신한다.\"\"\"\u001b[39;00m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 0"
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dijkstra.ipynb Cell 15\u001b[0m line \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m\"\"\"dijkstra algorithm 수행한다.\"\"\"\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dijkstra(start)\n",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dijkstra.ipynb Cell 15\u001b[0m line \u001b[0;36mdijkstra\u001b[1;34m(start)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m visited[now] \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m\"\"\"현재노드와 연결된 다른 노드들 확인\"\"\"\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m graph_dict[now]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     cost \u001b[39m=\u001b[39m distance[now] \u001b[39m+\u001b[39m j[\u001b[39m1\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dijkstra.ipynb#X12sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39m\"\"\"현재노드를 거쳐서 다른노드로의 이동거리가 최단거리테이블에 저장된 거리보다 짧은 경우에 최단거리테이블을 갱신한다.\"\"\"\u001b[39;00m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 6"
      ]
     }
    ],
